routecontroller/config/samples/apps.cloudfoundry.org_v1alpha1_route.yaml
apiVersion: apps.cloudfoundry.org.cloudfoundry.org/v1alpha1
kind: Route
metadata:
  name: route-sample
spec:
  # Add fields here
  foo: bar
