routecontroller/config/samples/networking_v1alpha1_route.yaml
apiVersion: networking.cloudfoundry.org/v1alpha1
kind: Route
metadata:
  name: route-sample
  namespace: cf-workloads
  annotations:
  labels:
    cloudfoundry.org/name: cc-route-guid
    cloudfoundry.org/org: cc-org-guid
    cloudfoundry.org/space: cc-space-guid
    cloudfoundry.org/domain: cc-domain-guid
    cloudfoundry.org/route: cc-route-guid
    cloudfoundry.org/managed-by: cloud_controller
spec:
  host: my-app-subdomain
  path: /
  url: my-app-subdomain.networking-DOMAIN/
  domain:
    name: networking-DOMAIN
    internal: false
  destinations:
  - weight: 100 # weights must add to 100
    app:
      guid: cc-app1-guid
      process:
        type: web
