routecontroller/config/samples/route2.yaml
apiVersion: networking.cloudfoundry.org/v1alpha1
kind: Route
metadata:
  name: destination-route-sample
  namespace: cf-workloads
  annotations:
  labels:
    cloudfoundry.org/name: cc-route-guid
    cloudfoundry.org/org: cc-org-guid
    cloudfoundry.org/space: cc-space-guid
    cloudfoundry.org/domain: cc-domain-guid
    cloudfoundry.org/route: cc-route-guid
    cloudfoundry.org/managed-by: cloud_controller
spec:
  host: my-app-subdomain
  path: /
  url: my-app-subdomain.APPS-DOMAIN/
  domain:
    name: APPS-DOMAIN
    internal: false
  destinations:
  - weight: 60 # weights must add to 100
    port: 8080
    selector:
      cloudfoundry.org/app_guid: cc-app1-guid
      cloudfoundry.org/process_type: web
  - weight: 40 # weights must add to 100
    port: 8080
    selector:
      cloudfoundry.org/app_guid: cc-app1-guid
      cloudfoundry.org/process_type: web
status:
  conditions:
    type: Ready
    status: false
